# assert_cmd

./: .clippy.toml  .clog.toml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  build.rs  release.toml
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml  committed.yml  pre-commit.yml  rust-next.yml  spelling.yml  template.yml
benches/: cargo.rs
examples/: example_fixture.rs  example_tty.rs  failure.rs
src/: assert.rs  cargo.rs  cmd.rs  color.rs  errors.rs  lib.rs  macros.rs  output.rs  stdin.rs
tests/: assert.rs  cargo.rs  docmatic.rs  examples.rs
