[package]
name = "assert_cmd"
version = "2.0.5"
description = "Test CLI Applications."
authors = ["Pascal Hertleif <killercup@gmail.com>", "Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/assert-rs/assert_cmd.git"
homepage = "https://github.com/assert-rs/assert_cmd"
documentation = "http://docs.rs/assert_cmd/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command", "duct"]
edition = "2018"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/assert_cmd/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
color = ["yansi", "concolor/std", "predicates/color"]
color-auto = ["color", "concolor/auto"]

[[bin]]
name = "bin_fixture"

[dependencies]
predicates = { version = "2.0", default-features = false, features = ["diff"] }
predicates-core = "1.0"
predicates-tree = "1.0"
doc-comment = "0.3"
wait-timeout = "0.2.0"
bstr = "0.2.14"
yansi = { version = "0.5.0", optional = true }
concolor = { version = "0.0.8", optional = true }

[dev-dependencies]
escargot = "0.5"
